Fix, not visible menu on desktop and tablet sizes.

--- a/src/sass/_header-desktop.scss
+++ b/src/sass/_header-desktop.scss
@@ -5,5 +5,10 @@
         width: 188px;
       }
     }
+    &.js-none {
+      li:nth-child(-n + 4) {
+        height: auto;
+      }
+    }
   }
 }
